ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jtq-ingress
  namespace: jtq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8081
